<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tugas.ayupriyambodo.ayupriyambodo_1202154303.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:text="@string/makan_malam"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/dengan_milea"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="72dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/menu"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="167dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Porsi"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="232dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickEatBus"
                android:text="@string/eatbus"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="346dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickUbnormal"
                android:text="@string/ubnormal"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="346dp" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
