<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tugas.ayupriyambodo.ayupriyambodo_1202154303.SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/makan_malam"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/eatbus"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="51dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/menu"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="130dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/Porsi"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="221dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/total"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="315dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
